[gd_scene load_steps=29 format=3 uid="uid://diocly1nuyxyt"]

[ext_resource type="Script" path="res://Entities/Weapons/Wands/bone_wand/bone_wand.gd" id="1_k4222"]
[ext_resource type="Texture2D" uid="uid://bval6yocc2y5" path="res://Entities/Weapons/Wands/bone_wand/bone_wand_sprite.png" id="1_x8qs3"]
[ext_resource type="Texture2D" uid="uid://vke31l6bbcag" path="res://assets/Castle/Flame.png" id="2_1js7s"]
[ext_resource type="Resource" uid="uid://c4qj5yf413nxr" path="res://Entities/Weapons/Wands/bone_wand/attacks/primary/fireball.tres" id="2_vpkr1"]
[ext_resource type="Resource" uid="uid://bg0cxho6xwfde" path="res://Entities/Weapons/Wands/bone_wand/attacks/secondary/mini_fireball_data.tres" id="3_2xam3"]
[ext_resource type="Texture2D" uid="uid://c7bpxrji5hsu3" path="res://assets/masks for  particles/20.png" id="5_b1qd0"]
[ext_resource type="Texture2D" uid="uid://6bpiy66lgqir" path="res://assets/projectile_sheets/green_projectiles.png" id="6_v2val"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_vhsve"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_163bn"]
offsets = PackedFloat32Array(0, 0.151631, 0.879079, 1)
colors = PackedColorArray(1, 1, 1, 0, 6.37732e-07, 0.393071, 0.246579, 0.501961, 0.431073, 0.810743, 0.326029, 0.552941, 1, 1, 1, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_o1lbs"]
atlas = ExtResource("6_v2val")
region = Rect2(96, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6j2fv"]
atlas = ExtResource("6_v2val")
region = Rect2(112, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nt627"]
atlas = ExtResource("6_v2val")
region = Rect2(128, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_p2i27"]
atlas = ExtResource("6_v2val")
region = Rect2(144, 289, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_wc0st"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_o1lbs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6j2fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nt627")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p2i27")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3pfjl"]
atlas = ExtResource("6_v2val")
region = Rect2(96, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f1sxy"]
atlas = ExtResource("6_v2val")
region = Rect2(112, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wx8qr"]
atlas = ExtResource("6_v2val")
region = Rect2(128, 289, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_1tse7"]
atlas = ExtResource("6_v2val")
region = Rect2(144, 289, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_62l8o"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3pfjl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f1sxy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wx8qr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1tse7")
}],
"loop": true,
"name": &"default",
"speed": 10.0
}]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_xgsqb"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_ntv8a"]
resource_local_to_scene = true
offsets = PackedFloat32Array(0, 0.156352, 0.820847, 0.993485)
colors = PackedColorArray(3.60981e-06, 0.881789, 0.27651, 0, 0.484949, 0.920187, 0.436563, 1, 0, 0.545098, 0.294118, 1, 1.68458e-07, 0.268509, 0.0226525, 0)

[sub_resource type="Animation" id="Animation_xu72r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers/Marker2D3/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Markers/Marker2D3/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Markers/Marker2D4/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Markers/Marker2D4/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_mp1vi"]
resource_name = "hide"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers/Marker2D3/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Markers/Marker2D3/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Markers/Marker2D4/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.3),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Markers/Marker2D4/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_himdh"]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers/Marker2D3/Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Markers/Marker2D3/Sprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Markers/Marker2D4/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Markers/Marker2D4/Sprite2D:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ck6ni"]
_data = {
"RESET": SubResource("Animation_xu72r"),
"hide": SubResource("Animation_mp1vi"),
"show": SubResource("Animation_himdh")
}

[sub_resource type="Animation" id="Animation_hd2ow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gsa1s"]
resource_name = "rotate"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Markers:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.26573]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_763yq"]
_data = {
"RESET": SubResource("Animation_hd2ow"),
"rotate": SubResource("Animation_gsa1s")
}

[node name="BoneWand" type="Node2D"]
script = ExtResource("1_k4222")
primary_attack = ExtResource("2_vpkr1")
secondary_attack = ExtResource("3_2xam3")
fireballs_amount = 10
firerate = 0.2

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_x8qs3")
offset = Vector2(0, -5)

[node name="Marker2D" type="Marker2D" parent="."]

[node name="GPUParticles2D" type="CPUParticles2D" parent="."]
material = SubResource("CanvasItemMaterial_vhsve")
position = Vector2(0, -15)
rotation = 1.5708
amount = 4
lifetime = 5.0
speed_scale = 5.6
explosiveness = 0.54
local_coords = true
texture = ExtResource("2_1js7s")
direction = Vector2(0, -1)
spread = 33.61
gravity = Vector2(0, 0)
angular_velocity_min = -15.0
angular_velocity_max = 15.0
angle_min = -25.4
angle_max = 30.4
scale_amount_min = 0.05
scale_amount_max = 0.05
color_ramp = SubResource("Gradient_163bn")

[node name="Marker" type="Marker2D" parent="."]
position = Vector2(0, -15)

[node name="Markers" type="Node2D" parent="."]
position = Vector2(0, -31)

[node name="Marker2D3" type="Marker2D" parent="Markers"]
position = Vector2(0, -8)

[node name="Sprite2D" type="AnimatedSprite2D" parent="Markers/Marker2D3"]
visible = false
sprite_frames = SubResource("SpriteFrames_wc0st")
autoplay = "default"

[node name="Marker2D4" type="Marker2D" parent="Markers"]
position = Vector2(0, 8)

[node name="Sprite2D" type="AnimatedSprite2D" parent="Markers/Marker2D4"]
visible = false
sprite_frames = SubResource("SpriteFrames_62l8o")
autoplay = "default"

[node name="FireballSpawner" type="Marker2D" parent="Markers"]

[node name="FireParticles" type="CPUParticles2D" parent="Markers"]
z_as_relative = false
material = SubResource("CanvasItemMaterial_xgsqb")
emitting = false
amount = 20
lifetime = 0.7
local_coords = true
texture = ExtResource("5_b1qd0")
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector2(0, 0)
gravity = Vector2(0, 0)
angular_velocity_min = 8.13
angular_velocity_max = 138.3
linear_accel_min = 5.0
linear_accel_max = 8.47
angle_min = -25.4
angle_max = 30.4
scale_amount_min = 0.01
scale_amount_max = 0.02
color_ramp = SubResource("Gradient_ntv8a")

[node name="Marker2D2" type="Marker2D" parent="."]
position = Vector2(7, -26)

[node name="Marker2D3" type="Marker2D" parent="."]
position = Vector2(-7, -26)

[node name="Timers" type="Node" parent="."]

[node name="FireballCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="FireballTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="PrimaryAttackCooldown" type="Timer" parent="Timers"]
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ck6ni")
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_763yq")
}
autoplay = "rotate"

[connection signal="animation_finished" from="AnimationPlayer2" to="." method="_on_animation_player_2_animation_finished"]
